<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9F6CF7"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="169dp"
        android:layout_height="163dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="484dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/movie_home"
        android:importantForAccessibility="no" />

    <Button
        android:id="@+id/btnentrar"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="147dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="Home"
        android:text="@string/btnetrar"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789" />

    <Button
        android:id="@+id/btncadastro"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginStart="147dp"
        android:layout_marginEnd="147dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="Cadastrar"
        android:text="@string/btncadastro"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <EditText
        android:id="@+id/txtsenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="103dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/txtsenha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="103dp"
        android:backgroundTint="#F8F8F8"
        android:ems="10"
        android:hint="@string/txtlogin"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/entre"
        android:layout_width="28dp"
        android:layout_height="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902"
        tools:text="@string/message" />

</androidx.constraintlayout.widget.ConstraintLayout>